[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/wallpaperfreeway.png" type="Texture" id=1]
[ext_resource path="res://ganha.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sons/tema.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ganha" parent="Sprite" instance=ExtResource( 2 )]
position = Vector2( 638.66, 64 )
gravity_scale = 0.0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 944, 696 )
scale = Vector2( 0.2, 0.2 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 696 )
scale = Vector2( 0.2, 0.2 )

[node name="hora_carro_rapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="hora_carro_devagar" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="placar2" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="placar1" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ganhou" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="hora_carro_rapido" to="." method="_on_hora_carro_rapido_timeout"]
[connection signal="timeout" from="hora_carro_devagar" to="." method="_on_hora_carro_devagar_timeout"]
